apps/base/bar-assistant/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-assistant
  namespace: bar-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-assistant
  template:
    metadata:
      labels:
        app: bar-assistant
    spec:
      containers:
        - name: server
          image: barassistant/server:v5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: bar-assistant-data
              mountPath: /var/www/html/storage
      volumes:
        - name: bar-assistant-data
          persistentVolumeClaim:
            claimName: bar-assistant-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bar-assistant-service
  namespace: bar-assistant
spec:
  selector:
    app: bar-assistant
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
