apps/base/bar-assistant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: meilisearch-stripprefix
  namespace: bar-assistant
spec:
  stripPrefix:
    prefixes:
      - /search
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bar-assistant
  namespace: bar-assistant
spec:
  entryPoints:
    - websecure
  tls:
    secretName: bar-assistant-tls
  routes:
    - match: Host(`mixitup.wc`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: bar-assistant-service
          port: 8080
    - match: Host(`mixitup.wc`) && PathPrefix(`/search`)
      kind: Rule
      middlewares:
        - name: meilisearch-stripprefix
      services:
        - name: meilisearch-service
          port: 7700
    - match: Host(`mixitup.wc`)
      kind: Rule
      services:
        - name: salt-rim-service
          port: 8080
